--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ body{
     display: flex;
     height: 100%;
     width: 100%;
-    background-color:darkslategray;
-    font-size: 3.5rem;
+    background-color:darkslateblue;
+    font-size: 4rem;
     color: white;
     font-style: oblique;
 }
@@ -50,7 +50,7 @@ body{
 }
 .start-game{ 
     grid-row: 3/4;
-    width: 40%;
+    width: 20%;
     background-color: black;
     color: white;
     border-radius: 16px;
@@ -64,6 +64,7 @@ body{
     height: 100%;
     grid-row: 4/5;
     display: grid;
+    gap: 3px;
     justify-content: center;
     align-content: center;
     justify-items: center;
@@ -74,7 +75,8 @@ body{
 .cell{
     width: var(--cell-size);
     height: var(--cell-size);
-    border: 1px solid black;
+    border: 4px solid black;
+    border-radius: 35%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,7 +86,7 @@ body{
 .cell.x,.cell.circle{
     cursor: not-allowed;
 }
-.cell:first-child,
+/* .cell:first-child,
 .cell:nth-child(2),
 .cell:nth-child(3){
     border-top: none;
@@ -99,7 +101,7 @@ body{
 .cell:nth-child(8),
 .cell:nth-child(7){
     border-bottom: none;
-}
+} */
 
 
 .cell.x::before,
@@ -110,7 +112,8 @@ body{
     position: absolute;
     width: calc(var(--mark-size)*.15);
     height: var(--mark-size);
-    background-color: black;
+    background-color: red;
+    border-radius: 50%;
 }
 
 .board.x .cell:not(.x):not(.circle):hover::before,
@@ -144,13 +147,13 @@ body{
 .board.circle .cell:not(.x):not(.circle):hover::before{ 
     width: var(--mark-size);
     height: var(--mark-size);
-    background-color: black;
+    background-color: blue;
 
 }
 .cell.circle::after,
 .board.circle .cell:not(.x):not(.circle):hover::after{
-    width: calc((var(--mark-size)*.70));
-    height: calc((var(--mark-size)*.70));
+    width: calc((var(--mark-size)*.75));
+    height: calc((var(--mark-size)*.75));
     background-color: white;
 }
 .board.circle .cell:not(.x):not(.circle):hover::before
@@ -176,6 +179,7 @@ background-color: lightgray;
     border: 1px solid black;
     padding: .25em .5em;
     cursor: pointer;
+    border-radius: 32px;
 }
 .winning-message button:hover{
     background-color: black;
